--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
+<!--
+  Vista: TODOS LOS BOTONES
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Botones :: Todos los botones</title>
 </head>
-<body>
-  
+<body style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-transform: uppercase;">
+  <!--
+    Cascading
+    Style
+    Sheet
+
+    Hoja de (tipo de archivo específico - ES UN LENGUAJE INDEPENDIENTE)
+    Estilo en (Propósito - ES UN LENGUAJE DE DISEÑO ENFOCADO EN LA PRESENTACIÓN)
+    Cascada (LO PARTICULAR POR SOBRE LO GENERAL)
+  -->
+  <div>
+    <a href="boton.html" style="display: inline-block; padding: 50px; background-color: red; color: white; text-decoration: none;">Clientes</a>
+    <a href="boton.html" style="display: inline-block; padding: 50px; background-color: cyan; color: black; text-decoration: none;">Productos</a>
+  </div>
+  <div>
+    <a href="boton.html" style="display: inline-block; padding: 50px; background-color: yellow; color: black; text-decoration: none;">Contabilidad</a>
+    <a href="boton.html" style="display: inline-block; padding: 50px; background-color: green;  color: white; text-decoration: none;">Equipo</a>
+  </div>
+    
 </body>
 </html>
+
+<!--
+  TU TRABAJO:
+  Todas los elementos de la página, tienen el fondo rojo.
+  Los divs tienen el color de letra blanco.
+
+  ------------------------------------------
+  EL TRABAJO DE CSS:
+  PARA EL DIV DE LA LINEA 20
+  fondo: rojo
+  color de letra: blanco
+
+  PARA EL A DE LA LINEA 21
+  fondo: rojo
+  color de letra: (por defecto)
+
+-->
