--- a/clase2/dev/index.html
+++ b/clase2/dev/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Compra de Zapatos al mejor precio">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -56,11 +58,11 @@
 </head>
 <body>
   <!--Caja grande-->
-  <div id="fondo">
+  <header id="fondo">
     <!--Menu-->
-    <div id="menu">
+    <nav id="menu">
       <a href="#">Home</a> | <a href="#">Catálogo</a> | <a href="#">Contacto</a>
-    </div>
+    </nav>
 
     <!--Caja chica / descripcion-->
     <div id="contenido">
@@ -68,7 +70,7 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ullamcorper tellus id dolor euismod aliquet. Etiam hendrerit mauris in elementum lobortis. Suspendisse mollis arcu in risus porta, a facilisis enim gravida. Suspendisse blandit aliquet augue, vel luctus erat ultricies sit amet. Aliquam et lacus id dolor lobortis elementum in hendrerit diam. Nullam dictum ligula ut sollicitudin euismod. Maecenas cursus suscipit lorem, nec mollis leo imperdiet eget. Praesent elementum tincidunt lectus ut hendrerit. Mauris ut fringilla purus, at aliquet urna. Pellentesque mattis, augue quis porta varius, ipsum elit molestie arcu, sed pretium arcu tortor at dolor.
 
     </div>
-  </div>
+  </header>
 
 </body>
 </html>
