--- a/clase3/dev/index.html
+++ b/clase3/dev/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Empanadas</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/lightbox.min.css">
 </head>
 <body>
   
@@ -37,19 +38,19 @@
         
         <div id="catalogo-contenedor">
           <!-- div.catalogo-item*10 -->
-          <a href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/490/300/200.jpg?hmac=qP4A6IEEMybCfSE3tHSANZ1gfuNT74WOY6KEe9sVMXE);">
+          <a data-lightbox="catalogo" href="https://i.picsum.photos/id/576/500/500.jpg?hmac=mZUp9kg9agiqIdoQ8rZZlWYSvLVIU5EYjc93ucD2Sw0" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/490/300/200.jpg?hmac=qP4A6IEEMybCfSE3tHSANZ1gfuNT74WOY6KEe9sVMXE);">
             <div>Lorem</div>
           </a>
-          <a href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/466/300/200.jpg?hmac=ynZ9L9zmxdc_vQ-UM_FDRX4tUF-5Ogg8apdMbX1_8sU);">
+          <a data-lightbox="catalogo" href="https://i.picsum.photos/id/518/500/500.jpg?hmac=PrrOHMRDF_jUhrcQVpJo0afLvH8yft6HA4veoxgfWmw" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/466/300/200.jpg?hmac=ynZ9L9zmxdc_vQ-UM_FDRX4tUF-5Ogg8apdMbX1_8sU);">
             <div>Lorem</div>
           </a>
-          <a href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/1047/300/200.jpg?hmac=WN57tGS6Qq9l7DPcvH5OUH1Fr0VacXLbpXpVo5BLdSA);">
+          <a data-lightbox="catalogo" href="https://i.picsum.photos/id/766/500/500.jpg?hmac=iFv6UhEbyHnHAaun-H3tW5U6gy1HSV7KS0hNgNgjM3g" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/1047/300/200.jpg?hmac=WN57tGS6Qq9l7DPcvH5OUH1Fr0VacXLbpXpVo5BLdSA);">
             <div>Lorem</div>
           </a>
-          <a href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/992/300/200.jpg?hmac=w137wSlXMe7QugWkdz2qvxFlif1dwEWqNnv4qFIyWps);">
+          <a data-lightbox="catalogo" href="https://i.picsum.photos/id/385/500/500.jpg?hmac=pT0ThioZsCmxd0zsVbCnveh0RNWI6uuH1MdOU_w1Wmw" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/992/300/200.jpg?hmac=w137wSlXMe7QugWkdz2qvxFlif1dwEWqNnv4qFIyWps);">
             <div>Lorem</div>
           </a>
-          <a href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/53/300/200.jpg?hmac=YsNm0npNdS8RzjolSsbIgksfvnuT-9tFVwzpAkCdsBI);">
+          <a data-lightbox="catalogo" href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/53/300/200.jpg?hmac=YsNm0npNdS8RzjolSsbIgksfvnuT-9tFVwzpAkCdsBI);">
             <div>Lorem</div>
           </a>
         </div>
@@ -90,5 +91,6 @@
 
   </div>
 
+  <script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
