--- a/clase3/dev/index.html
+++ b/clase3/dev/index.html
@@ -50,7 +50,7 @@
           <a data-lightbox="catalogo" href="https://i.picsum.photos/id/385/500/500.jpg?hmac=pT0ThioZsCmxd0zsVbCnveh0RNWI6uuH1MdOU_w1Wmw" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/992/300/200.jpg?hmac=w137wSlXMe7QugWkdz2qvxFlif1dwEWqNnv4qFIyWps);">
             <div>Lorem</div>
           </a>
-          <a data-lightbox="catalogo" href="#" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/53/300/200.jpg?hmac=YsNm0npNdS8RzjolSsbIgksfvnuT-9tFVwzpAkCdsBI);">
+          <a data-lightbox="catalogo" href="images/imgGrande.jpg" class="catalogo-item" style="background-image: url(https://i.picsum.photos/id/53/300/200.jpg?hmac=YsNm0npNdS8RzjolSsbIgksfvnuT-9tFVwzpAkCdsBI);">
             <div>Lorem</div>
           </a>
         </div>
