--- a/clase4/dev/principal.html
+++ b/clase4/dev/principal.html
@@ -48,12 +48,12 @@
     <a href="#">Salir</a>
   </nav>
   <main id="grilla">
-    <a href="#" class="grilla-item grilla-item-rojo">Modulo 1</a>
-    <a href="#" class="grilla-item grilla-item-verde">Modulo 2</a>
-    <a href="#" class="grilla-item grilla-item-azul">Modulo 3</a>
-    <a href="#" class="grilla-item grilla-item-rojo">Modulo 4</a>
-    <a href="#" class="grilla-item grilla-item-amarillo">Modulo 5</a>
-    <a href="#" class="grilla-item grilla-item-azul">Modulo 6</a>
+    <a href="modulo.html" class="grilla-item grilla-item-rojo">Modulo 1</a>
+    <a href="modulo.html" class="grilla-item grilla-item-verde">Modulo 2</a>
+    <a href="modulo.html" class="grilla-item grilla-item-azul">Modulo 3</a>
+    <a href="modulo.html" class="grilla-item grilla-item-rojo">Modulo 4</a>
+    <a href="modulo.html" class="grilla-item grilla-item-amarillo">Modulo 5</a>
+    <a href="modulo.html" class="grilla-item grilla-item-azul">Modulo 6</a>
   </main>
 </body>
 </html>
