--- a/clase4/dev/modulo.html
+++ b/clase4/dev/modulo.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/componentes.css">
 
   <style>
+    body {
+      height: 1000px;
+    }
     table {
 
     }
@@ -29,15 +32,16 @@
 <body>
   <nav class="barra-menu">
     <span>Nombre usuario</span>
-    <a href="#">Salir</a>
+    <a href="index.html">Salir</a>
   </nav>
 
   <main class="main-wrapper">
     <aside class="sidebar">
       <div class="sidebar-header">Productos</div>
-      <div class="sidebar-item">Item 1</div>
-      <div class="sidebar-item">Item 2</div>
-      <div class="sidebar-item">Item 3</div>
+      <div class="sidebar-item"><a href="modulo-alta.html">ALTA</a></div>
+      <div class="sidebar-item"><a href="modulo-baja.html">BAJA</a></div>
+      <div class="sidebar-item"><a href="modulo-modificacion.html">MODIFICACION</a></div>
+      <div class="sidebar-item"><a href="principal.html">Atrás</a></div>
     </aside>
     <section class="area-trabajo">
       <table>
