--- a/clase4/dev/modulo-modificacion.html
+++ b/clase4/dev/modulo-modificacion.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="barra-menu">
     <span>Nombre usuario</span>
-    <a href="#">Salir</a>
+    <a href="index.html">Salir</a>
   </nav>
 </body>
 </html>
